# SnakeGame

./: .python-version  CLAUDE.md  README.md  agent.py  base.py  game_no_ui.py  pyproject.toml  requirements.txt
model/: data.json  model-1.pth  model-2.pth  model.pth
scripts/: eval_with_gui.sh  evaluate.sh  train.sh
src/: evaluate.py  game.py  game_base.py  game_no_ui.py  game_single.py  model.py  train.py
