[project]
name = "snakegame"
version = "0.1.0"
description = ""
authors = [{ name = "kento2247", email = "tkento1985@icloud.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==2.5.1)",
    "filelock (==3.16.1)",
    "fsspec (==2024.12.0)",
    "jinja2 (==3.1.5)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.2.1)",
    "numpy (==2.0.2)",
    "pygame (==2.6.1)",
    "sympy (==1.13.1)",
    "typing-extensions (==4.12.2)",
    "tqdm>=4.67.1",
]
